<resources>
    <string name="app_name">Android-HyoRim-30th</string>
    <string name="SOPT">SOPT</string>
    <string name="id">아이디</string>
    <string name="hint_enter_id">아이디를 입력해주세요.</string>
    <string name="pw">비밀번호</string>
    <string name="hint_enter_pw">비밀번호를 입력해주세요.</string>
    <string name="login">로그인</string>
    <string name="login_success">로그인 성공</string>
    <string name="sign_up">회원가입</string>
    <string name="check_id_pw">아이디/비밀번호를 확인해주세요</string>
    <string name="name">이름</string>
    <string name="hint_enter_name">이름을 입력해주세요.</string>
    <string name="complete_sign_up">회원가입 완료</string>
    <string name="malformed_data">입력되지 않은 정보가 있습니다</string>
    <string name="save_id">아이디 저장</string>
    <string name="auto_save_id">자동 아이디 저장</string>
    <string name="cancel_sign_up">회원가입 취소</string>
    <string name="follower_list">팔로워 목록</string>
    <string name="repository_list">레파지토리 목록</string>
    <string name="profile_image">profile image</string>
    <string name="profile">프로필</string>
    <string name="camera">카메라</string>
    <string name="home">홈</string>
    <string name="github">GitHub</string>
    <string name="append_img">사진을 첨부해 주세요</string>
    <string name="service_preparing">준비중입니다</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="append">첨부하기</string>
</resources>